feat. Tests Jacoco

--- a/pom.xml
+++ b/pom.xml
@@ -79,12 +79,15 @@
 						<configuration>
 							<rules>
 								<rule>
-									<element>PACKAGE</element>
+									<element>CLASS</element>
+									<excludes>
+										<exclude>com.co.meli.coupon.CouponMeliApplication</exclude>
+									</excludes>
 									<limits>
 										<limit>
 											<counter>LINE</counter>
 											<value>COVEREDRATIO</value>
-											<minimum>0.9</minimum>
+											<minimum>80%</minimum>
 										</limit>
 									</limits>
 								</rule>
