--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 meli.api.base = https://api.mercadolibre.com/
+spring.application.name: coupon-meli
+springdoc.swagger-ui.path: /swagger-ui.html
+server.port = 5000
